--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
   }
 
   .navbar a {
-    margin-right: 25px; /* 调整超链接之间的右侧间距 */
+    margin-right: 40px; /* 调整超链接之间的右侧间距 */
     font-size: 15px; /* 增大字体大小 */
+    text-decoration: none; /* 移除超链接的下划线 */
+    color: #3a5779;
   }
   .navbar a::after {
     content: "";
     position: absolute; /* 设置伪元素为绝对定位 */
-    width: 160mm; /* 设置伪元素宽度为0.5毫米 */
+    width: 205mm; /* 设置伪元素宽度为0.5毫米 */
     height: 8mm; /* 设置伪元素高度为15毫米 */
     background-color: #F6F6F6; /* 设置伪元素背景颜色为浅灰色 */
-    top: 2%; /* 将伪元素垂直居中 */
+    top: 1%; /* 将伪元素垂直居中 */
     left: 50%; /* 将伪元素定位在超链接的右侧 */
     transform: translate(-50%, -50%); /* 将伪元素水平和垂直居中 */
     z-index: -1;
@@ -109,7 +111,7 @@
   }
 </style>
 <p>
-	I am an graduate student at Southern Medical University. My research lies at the intersection of artificial intelligence and healthcare. 
+	I am an assistant professor at The Wake Forest University School of Medicine. My research lies at the intersection of artificial intelligence and healthcare. 
 	We are dedicated to designing advanced machine learning algorithms for biomedical data analysis, primarily focusing on medical images, to improve medical decision-making.  
 	Specifically, we focus on: 
 	1) developing multimodal learning algorithms (e.g., multimodal foundation model) to integrate multi-scale biomedical data for disease prevention, diagnosis, prognosis, and treatment design; 
@@ -154,9 +156,22 @@
 </style>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">Southern Medical University, Guangzhou, Guangdong, China</div> <div style="float:right; text-align:right">Sep. 2022 – Jun. 2025</div><br>
+		<div style="float:left; text-align:left">Southern Medical University, Guangzhou, Guangdong, China</div> <div style="float:right; text-align:right">Sep. 2013 – Jun. 2018</div><br>
 		Graduate Student<br>
-		Advisor: Prof. Yuming Jiang</a><br>
+		Advisor: Prof. Guoxin Li<br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left">Nanfang Hospital, Southern Medical University, Guangzhou, Guangdong, China</div> <div style="float:right; text-align:right">Jul. 2018 – Nov. 2018</div><br>
+		Surgical Resident<br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2018 – Aug. 2023</div><br>
+		Postdoctoral Research Fellow<br>
+		Advisor: Prof. Ruijiang Li<br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left">Wake Forest University School of Medicine, Winston Salem, North Carolina, USA</div> <div style="float:right; text-align:right">Aug. 2023 – Present</div><br>
+		Assistant Professor<br>
 	</li>
 </ul>
 <br>
