--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     body {
         max-width: 800px; /* 设置页面最大宽度为1200像素 */
         margin: 0 auto; /* 水平居中对齐 */
+	background-color: #F6F6F6;
   }
   .navbar {
     text-align: center; /* 将导航栏内容居中对齐 */
@@ -21,7 +22,7 @@
 
   .navbar a {
     margin-right: 40px; /* 调整超链接之间的右侧间距 */
-    font-size: 15px; /* 增大字体大小 */
+    font-size: 10px; /* 增大字体大小 */
     text-decoration: none; /* 移除超链接的下划线 */
     color: #3a5779;
   }
@@ -184,7 +185,7 @@
 </div>
 
 <div id="publications">
-<h2 id="SelectedPublications">Selected Publications [<a href="https://scholar.google.com/citations?user=llXf3wUAAAAJ&hl=en">Google Scholar</a>]</h2>
+<h2 id="SelectedPublications">Selected Publications [<a href="https://scholar.google.com/citations?hl=en&user=FxBBKhoAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>]</h2>
 <style>
   #SelectedPublications {
     color: #3a5779;
@@ -196,14 +197,40 @@
 	</ul>
 -->
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
+
+	
+	<ul>
+	<li>
+		<a href="" target="_blank">QUIZ: An arbitrary volumetric point matching method for medical imageregistration</a><br>
+		Lin Liu, Xinxin Fan, Haoyang Liu, Chulong Zhang, Weibin Kong, Jingjing Dai, <b>Yuming Jiang</b>, Yaoqin Xie, Xiaokun Liang.<br>
+		<em>Computerized Medical Imaging and Graphics</em>,2024.</br>
+	</li>
+	</ul>	
 	<ul>
 	<li>
 		<a href="" target="_blank">Comprehensive assessment of immune context and immunotherapy response via noninvasive imaging in gastric cancer</a><br>
-		Zepang Sun, <b>Taojun Zhang</b>, M Usman Ahmad, Zixia Zhou, Liang Qiu, Kangneng Zhou, Wenjun Xiong, Jingjing Xie, Zhicheng Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Wanying Feng, Yikai Xu, Lequan Yu, Wei Wang, Jiang Yu, Guoxin Li, Yuming Jiang.<br>
+		Zepang Sun, Taojun Zhang, M Usman Ahmad, Zixia Zhou, Liang Qiu, Kangneng Zhou, Wenjun Xiong, Jingjing Xie, Zhicheng Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Wanying Feng, Yikai Xu, Lequan Yu, Wei Wang, Jiang Yu, Guoxin Li, <b>Yuming Jiang</b>.<br>
 		<em>Journal of Clinical Investigation</em>,2024.</br>
 	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Volumetric tumor tracking from a single cone-beam X-ray projection image enabled by deep learning</a><br>
+		Jingjing Dai, Guoya Dong, Chulong Zhang, Wenfeng He, Lin Liu, Tangsheng Wang, <b>Yuming Jiang</b>, Wei Zhao, Xiang Zhao, Yaoqin Xie, Xiaokun Liang.<br>
+		<em>Medical Image Analysis</em>,2024.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">A statistical deformation model-based data augmentation method for volumetric medical image segmentation</a><br>
+		Wenfeng He, Chulong Zhang, Jingjing Dai, Lin Liu, Tangsheng Wang, Xuan Liu, <b>Yuming Jiang</b>, Na Li, Jing Xiong, Lei Wang, Yaoqin Xie, Xiaokun Liang.<br>
+		<em>Medical Image Analysis</em>,2024.</br>
+	</li>
+	</ul>
 
-	</ul>	
+
+
+	
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
@@ -211,6 +238,15 @@
 		Zepang Sun, Wei Wang, Weicai Huang, <b>Taojun Zhang</b>, Chuanli Chen, Qingyu Yuan, Yan Chen, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Yanfeng Hu, Jiang Yu, Hao Liu, Lequan Yu, Yikai Xu, Guoxin Li, Yuming Jiang.<br>
 		<em>International Journal of Surgery</em>, 2023.</br>
 	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Noninvasive imaging evaluation of peritoneal recurrence and chemotherapy benefit in gastric cancer after gastrectomy: a multicenter study</a><br>
+		Zepang Sun, Wei Wang, Weicai Huang, <b>Taojun Zhang</b>, Chuanli Chen, Qingyu Yuan, Yan Chen, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Yanfeng Hu, Jiang Yu, Hao Liu, Lequan Yu, Yikai Xu, Guoxin Li, Yuming Jiang.<br>
+		<em>International Journal of Surgery</em>, 2023.</br>
+	</li>
+	</ul>	
+	<ul>
 	<li>
 		<a href="" target="_blank">Non-invasive tumor microenvironment evaluation and treatment response prediction in gastric cancer using deep learning radiomics</a><br>
 		Yuming Jiang, Kangneng Zhou, Zepang Sun, Hongyu Wang, Jingjing Xie, <b>Taojun Zhang</b>, Shengtian Sang, Md Tauhidul Islam, Jen-Yeu Wang, Chuanli Chen, Qingyu Yuan, Sujuan Xi, Tuanjie Li, Yikai Xu, Wenjun Xiong, Wei Wang, Guoxin Li, Ruijiang Li.<br>
