--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Noninvasive imaging evaluation of peritoneal recurrence and chemotherapy benefit in gastric cancer after gastrectomy: a multicenter study</a><br>
-		Zepang Sun, Wei Wang, Weicai Huang, <b>Taojun Zhang</b>, Chuanli Chen, Qingyu Yuan, Yan Chen, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Yanfeng Hu, Jiang Yu, Hao Liu, Lequan Yu, Yikai Xu, Guoxin Li, Yuming Jiang.<br>
-		<em>International Journal of Surgery</em>, 2023.</br>
+		<a href="" target="_blank">Morphological diversity of cancer cells predicts prognosis across tumor types</a><br>
+		Rasoul Sali, <b>Yuming Jiang</b>, Armin Attaranzadeh, Brittany Holmes, Ruijiang Li.<br>
+		<em>Journal of the National Cancer Institute</em>, 2023.</br>
 	</li>
 	</ul>
 	<ul>
