--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <title>Yuming Jiang Homepage</title>
 <style>
     body {
-        max-width: 800px; /* 设置页面最大宽度为1200像素 */
         margin: 0 auto; /* 水平居中对齐 */
-	background-color: #F6F6F6;
   }
   .navbar {
     text-align: center; /* 将导航栏内容居中对齐 */
@@ -22,21 +20,26 @@
 
   .navbar a {
     margin-right: 40px; /* 调整超链接之间的右侧间距 */
-    font-size: 10px; /* 增大字体大小 */
+    font-size: 12px; /* 增大字体大小 */
     text-decoration: none; /* 移除超链接的下划线 */
     color: #3a5779;
   }
-  .navbar a::after {
-    content: "";
-    position: absolute; /* 设置伪元素为绝对定位 */
-    width: 205mm; /* 设置伪元素宽度为0.5毫米 */
-    height: 8mm; /* 设置伪元素高度为15毫米 */
-    background-color: #F6F6F6; /* 设置伪元素背景颜色为浅灰色 */
-    top: 1%; /* 将伪元素垂直居中 */
-    left: 50%; /* 将伪元素定位在超链接的右侧 */
-    transform: translate(-50%, -50%); /* 将伪元素水平和垂直居中 */
-    z-index: -1;
-  }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: #FFF; /* 页面宽度内的区域设置为白色 */
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #F6F6F6; /* 页面宽度以外的区域设置为 #F6F6F6 */
+      z-index: -1;
+    }
 </style>
 
 <script>
