--- a/index.html
+++ b/index.html
@@ -10,37 +10,18 @@
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Yuming Jiang Homepage</title>
-<style>
+  <style>
     body {
-        margin: 0 auto; /* 水平居中对齐 */
-  }
-  .navbar {
-    text-align: center; /* 将导航栏内容居中对齐 */
-  }
+      margin: 0;
+      background-color: #F6F6F6; /* 页面宽度以外的区域设置为 #F6F6F6 */
+    }
 
-  .navbar a {
-    margin-right: 40px; /* 调整超链接之间的右侧间距 */
-    font-size: 12px; /* 增大字体大小 */
-    text-decoration: none; /* 移除超链接的下划线 */
-    color: #3a5779;
-  }
     .container {
       max-width: 800px;
       margin: 0 auto;
       background-color: #FFF; /* 页面宽度内的区域设置为白色 */
     }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #F6F6F6; /* 页面宽度以外的区域设置为 #F6F6F6 */
-      z-index: -1;
-    }
-</style>
+  </style>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
