--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Noninvasive imaging evaluation of peritoneal recurrence and chemotherapy benefit in gastric cancer after gastrectomy: a multicenter study</a><br>
-		Zepang Sun, Wei Wang, Weicai Huang, <b>Taojun Zhang</b>, Chuanli Chen, Qingyu Yuan, Yan Chen, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Yanfeng Hu, Jiang Yu, Hao Liu, Lequan Yu, Yikai Xu, Guoxin Li, Yuming Jiang.<br>
-		<em>International Journal of Surgery</em>, 2023.</br>
+		<a href="" target="_blank">Cancer immunotherapy response prediction from multi-modal clinical and image data using semi-supervised deep learning</a><br>
+		Xi Wang, <b>Yuming Jiang</b>, Hao Chen, Taojun Zhang, Zhen Han, Chuanli Chen, Qingyu Yuan, Wenjun Xiong, Wei Wang, Guoxin Li, Pheng-Ann Heng, Ruijiang Li.<br>
+		<em>Radiotherapy and Oncology</em>, 2023.</br>
 	</li>
 	</ul>	
 	<ul>
@@ -237,6 +237,11 @@
 		<em>Cell Reports Medicine</em>, 2023.</br>
 	</li>
 	</ul>
+
+
+
+
+	
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
