--- a/index.html
+++ b/index.html
@@ -248,7 +248,14 @@
 	<ul>
 	<li>
 		<a href="" target="_blank">Non-invasive tumor microenvironment evaluation and treatment response prediction in gastric cancer using deep learning radiomics</a><br>
-		Yuming Jiang, Kangneng Zhou, Zepang Sun, Hongyu Wang, Jingjing Xie, <b>Taojun Zhang</b>, Shengtian Sang, Md Tauhidul Islam, Jen-Yeu Wang, Chuanli Chen, Qingyu Yuan, Sujuan Xi, Tuanjie Li, Yikai Xu, Wenjun Xiong, Wei Wang, Guoxin Li, Ruijiang Li.<br>
+		<b>Yuming Jiang</b>, Kangneng Zhou, Zepang Sun, Hongyu Wang, Jingjing Xie, Taojun Zhang, Shengtian Sang, Md Tauhidul Islam, Jen-Yeu Wang, Chuanli Chen, Qingyu Yuan, Sujuan Xi, Tuanjie Li, Yikai Xu, Wenjun Xiong, Wei Wang, Guoxin Li, Ruijiang Li.<br>
+		<em>Cell Reports Medicine</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
+		<b>Yuming Jiang</b>, Zhicheng Zhang, Wei Wang, Weicai Huang, Chuanli Chen, Sujuan Xi, M Usman Ahmad, Yulan Ren, Shengtian Sang, Jingjing Xie, Jen-Yeu Wang, Wenjun Xiong, Tuanjie Li, Zhen Han, Qingyu Yuan, Yikai Xu, Lei Xing, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
 		<em>Cell Reports Medicine</em>, 2023.</br>
 	</li>
 	</ul>
