--- a/index.html
+++ b/index.html
@@ -255,11 +255,46 @@
 	<li>
 		<a href="" target="_blank">Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
 		<b>Yuming Jiang</b>, Zhicheng Zhang, Wei Wang, Weicai Huang, Chuanli Chen, Sujuan Xi, M Usman Ahmad, Yulan Ren, Shengtian Sang, Jingjing Xie, Jen-Yeu Wang, Wenjun Xiong, Tuanjie Li, Zhen Han, Qingyu Yuan, Yikai Xu, Lei Xing, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
-		<em>Cell Reports Medicine</em>, 2023.</br>
+		<em>Nature Communications</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">An Unsupervised Learning-Based Regional Deformable Model for Automated Multi-Organ Contour Propagation</a><br>
+		<b>Xiaokun Liang, Jingjing Dai, Xuanru Zhou, Lin Liu, Chulong Zhang, <b>Yuming Jiang</b>, Na Li, Tianye Niu, Yaoqin Xie, Zhenhui Dai, Xuetao Wang.<br>
+		<em>Journal of Digital Imaging</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Noninvasive imaging evaluation of peritoneal recurrence and chemotherapy benefit in gastric cancer after gastrectomy: a multicenter study</a><br>
+		Zepang Sun, Wei Wang, Weicai Huang, Taojun Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Yanfeng Hu, Jiang Yu, Hao Liu, Lequan Yu, Yikai Xu, Guoxin Li, <b>Yuming Jiang</b>.<br>
+		<em>International Journal of Surgery</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Survival Prediction via Hierarchical Multimodal Co-Attention Transformer: A Computational Histology-Radiology Solution</a><br>
+		Zhe Li, <b>Yuming Jiang</b>, Mengkang Lu, Ruijiang Li, Yong Xia.<br>
+		<em>IEEE Transactions on Medical Imaging</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Artificial intelligence for clinical oncology: current status and future outlook</a><br>
+		<b>Yuming Jiang</b>, Ruijiang Li, Guoxin Li.<br>
+		<em>Science bulletin</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Sinogram domain metal artifact correction of CT via deep learning</a><br>
+		Yulin Zhu, Hanqing Zhao, Tangsheng Wang, Lei Deng, Yupeng Yang, <b>Yuming Jiang</b>, Na Li, Yinping Chan, Jingjing Dai, Chulong Zhang, Yunhui Li, Yaoqin Xie, Xiaokun Liang.<br>
+		<em>Computers in Biology and Medicine</em>, 2023.</br>
 	</li>
 	</ul>
 
-
+	
 
 
 	
@@ -278,7 +313,6 @@
 		<b>Lequan Yu</b>, Zhicheng Zhang, Xiaomeng Li, Hongyi Ren, Wei Zhao, Lei Xing.<br>
 		<em>Physics in Medicine & Biology</em> (<i><b>PMB</b></i>), 2021.</br>
 	</li>
-
 	</ul>
 	
 	<p><font face="Arial" size="4"><b>Before 2020</b></font></p> 
