--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 	<ul>
 	<li>
 		<a href="" target="_blank">An Unsupervised Learning-Based Regional Deformable Model for Automated Multi-Organ Contour Propagation</a><br>
-		<b>Xiaokun Liang, Jingjing Dai, Xuanru Zhou, Lin Liu, Chulong Zhang, <b>Yuming Jiang</b>, Na Li, Tianye Niu, Yaoqin Xie, Zhenhui Dai, Xuetao Wang.<br>
+		Xiaokun Liang, Jingjing Dai, Xuanru Zhou, Lin Liu, Chulong Zhang, <b>Yuming Jiang</b>, Na Li, Tianye Niu, Yaoqin Xie, Zhenhui Dai, Xuetao Wang.<br>
 		<em>Journal of Digital Imaging</em>, 2023.</br>
 	</li>
 	</ul>
