--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
   <title>Yuming Jiang Homepage</title>
   <style>
       body {
-          max-width: 800px; /* 设置页面最大宽度为800像素 */
-          margin: 0 auto; /* 水平居中对齐 */
-    }
-    .navbar {
-      text-align: center; /* 将导航栏内容居中对齐 */
+          margin: 0;
+          padding: 0;
+          background-color: #F6F6F6
     }
 
-    .navbar a {
-      margin-right: 40px; /* 调整超链接之间的右侧间距 */
-      font-size: 15px; /* 增大字体大小 */
-      text-decoration: none; /* 移除超链接的下划线 */
-      color: #3a5779;
-    }
+
+      .container {
+          max-width: 800px;
+          margin: 0 auto;
+          background-color: #FFFFFF;
+          padding: 20px;
+      }
+
+      .navbar {
+          text-align: center;
+      }
+
+      .navbar a {
+          margin-right: 40px;
+          font-size: 15px;
+          text-decoration: none;
+          color: #3a5779;
+      }
+  
+
     .navbar a::after {
       content: "";
       position: absolute; /* 设置伪元素为绝对定位 */
