--- a/index.html
+++ b/index.html
@@ -305,7 +305,27 @@
 		<em>Computers in Biology and Medicine</em>, 2023.</br>
 	</li>
 	</ul>
-
+	<ul>
+	<li>
+		<a href="" target="_blank">Development and Validation of a Machine Learning Model for Detection and Classification of Tertiary Lymphoid Structures in Gastrointestinal Cancers</a><br>
+		Zhe Li, <b>Yuming Jiang</b>, Bailiang Li, Zhen Han, Jeanne Shen, Yong Xia, Ruijiang Li.<br>
+		<em>JAMA Network Open</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Non-invasive CT imaging biomarker to predict immunotherapy response in gastric cancer: a multicenter study</a><br>
+		Weicai Huang, Wenjun Xiong, Lei Tang, Chuanli Chen, Qingyu Yuan, Cheng Zhang, Kangneng Zhou, Zepang Sun, Taojun Zhang, Zhen Han, Hao Feng, Xiaokun Liang, Yonghong Zhong, Haijun Deng, Lequan Yu, Yikai Xu, Wei Wang, Lin Shen, Guoxin Li, <b>Yuming Jiang</b>.<br>
+		<em>Journal for ImmunoTherapy of Cancer</em>, 2023.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
+		Yanyan Huang, Weiqin Zhao, Shujun Wang, Yu Fu, <b>Yuming Jiang</b>, Lequan Yu.<br>
+		<em>JAMA Network Open</em>, 2023.</br>
+	</li>
+	</ul>
 	
 
 
