--- a/index.html
+++ b/index.html
@@ -2,62 +2,51 @@
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-  <link rel="shortcut icon" href="myIcon.ico">
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<link rel="shortcut icon" href="myIcon.ico">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-  <meta name="keywords" content="Yuming Jiang, Jiang Yuming, Yuming, Wake Forest University"> 
-  <meta name="description" content="Yuming Jiang is an assistant professor at Wake Forest University.">
-  <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
-  <link rel="stylesheet" href="jemdoc.css" type="text/css">
-  <title>Yuming Jiang Homepage</title>
-  <style>
-      body {
-          margin: 0;
-          padding: 0;
-          background-color: #F6F6F6
-    }
+<meta name="keywords" content="Taojun Zhang, Zhang Taojun, Taojun, Southern Medical University, SMU"> 
+<meta name="description" content="Taojun Zhang is a Graduate student at SMU.">
+<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
+<link rel="stylesheet" href="jemdoc.css" type="text/css">
+<title>Taojun Zhang Homepage</title>
+<style>
+    body {
+        max-width: 800px; /* 设置页面最大宽度为1200像素 */
+        margin: 0 auto; /* 水平居中对齐 */
+  }
+  .navbar {
+    text-align: center; /* 将导航栏内容居中对齐 */
+  }
 
+  .navbar a {
+    margin-right: 40px; /* 调整超链接之间的右侧间距 */
+    font-size: 15px; /* 增大字体大小 */
+    text-decoration: none; /* 移除超链接的下划线 */
+    color: #3a5779;
+  }
+  .navbar a::after {
+    content: "";
+    position: absolute; /* 设置伪元素为绝对定位 */
+    width: 205mm; /* 设置伪元素宽度为0.5毫米 */
+    height: 8mm; /* 设置伪元素高度为15毫米 */
+    background-color: #F6F6F6; /* 设置伪元素背景颜色为浅灰色 */
+    top: 1%; /* 将伪元素垂直居中 */
+    left: 50%; /* 将伪元素定位在超链接的右侧 */
+    transform: translate(-50%, -50%); /* 将伪元素水平和垂直居中 */
+    z-index: -1;
+  }
+</style>
 
-      .container {
-          max-width: 800px;
-          margin: 0 auto;
-          background-color: #FFFFFF;
-          padding: 20px;
-      }
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      .navbar {
-          text-align: center;
-      }
+  ga('create', 'UA-87320911-1', 'auto');
+  ga('send', 'pageview');
 
-      .navbar a {
-          margin-right: 40px;
-          font-size: 15px;
-          text-decoration: none;
-          color: #3a5779;
-      }
-  
-
-    .navbar a::after {
-      content: "";
-      position: absolute; /* 设置伪元素为绝对定位 */
-      width: 205mm; /* 设置伪元素宽度为0.5毫米 */
-      height: 8mm; /* 设置伪元素高度为15毫米 */
-      background-color: #F6F6F6; /* 设置伪元素背景颜色为浅灰色 */
-      top: 1%; /* 将伪元素垂直居中 */
-      left: 50%; /* 将伪元素定位在超链接的右侧 */
-      transform: translate(-50%, -50%); /* 将伪元素水平和垂直居中 */
-      z-index: -1;
-    }
-  </style>
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-87320911-1', 'auto');
-    ga('send', 'pageview');
 </script>
 </head>
 <body>
@@ -323,21 +312,54 @@
 	<li>
 		<a href="" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
 		Yanyan Huang, Weiqin Zhao, Shujun Wang, Yu Fu, <b>Yuming Jiang</b>, Lequan Yu.<br>
-		<em>JAMA Network Open</em>, 2023.</br>
+		<em>Proceedings of the IEEE/CVF International Conference on Computer Vision</em>, 2023.</br>
 	</li>
 	</ul>
-	
-
-
 	
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
-		<a href="https://www.nature.com/articles/s41467-022-34595-w" target="_blank">Leveraging data-driven self-consistency for high-fidelity gene expression recovery</a><br>
-		Md Tauhidul Islam, Jen-Yeu Wang, Hongyi Ren, Xiaomeng Li, Masoud Badiei Khuzani, Shengtian Sang, <b>Lequan Yu</b>, Liyue Shen, Wei Zhao, Lei Xing.<br>
+		<a href="" target="_blank">1284 Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
+		<b>Yuming Jiang</b>, Zhicheng Zhang, Wei Wang, Chuanli Chen, Sujuan Xi, M Usman Ahmad, Yulan Ren, Shengtian Sang, Jingjing Xie, Wenjun Xiong, Tuanjue Li, Zhen Han, Qingyu Yuan, Yikai Xu, Lei Xing, George Poultsides, Guoxin Li, Ruijiang Li.<br>
+		<em>Journal for ImmunoTherapy of Cancer</em>, 2022.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Noninvasive imaging of the tumor immune microenvironment correlates with response to immunotherapy in gastric cancer</a><br>
+		Weicai Huang, <b>Yuming Jiang</b>, Wenjun Xiong, Zepang Sun, Chuanli Chen, Qingyu Yuan, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Shitong Yu, Yanfeng Hu, Jiang Yu, Yan Chen, Liying Zhao, Hao Liu, Zhiwei Zhou, Wei Wang, Wei Wang, Yikai Xu, Guoxin Li.<br>
 		<em>Nature Communications</em>, 2022.</br>
 	</li>
 	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">A Hybrid Deep Feature-Based Deformable Image Registration Method for Pathology Images</a><br>
+		Chulong Zhang, <b>Yuming Jiang</b>, Na Li, Zhicheng Zhang, Md Tauhidul Islam, Jingjing Dai, Lin Liu, Wenfeng He, Wenjian Qin, Jing Xiong, Yaoqin Xie, Xiaokun Liang.<br>
+		<em>arXiv preprint arXiv:2208.07655</em>, 2022.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">PAK6 promotes homologous-recombination to enhance chemoresistance to oxaliplatin through ATR/CHK1 signaling in gastric cancer</a><br>
+		Weicai Huang, Zhen Han, Zepang Sun, Hao Feng, Liying Zhao, Qingyu Yuan, Chuanli Chen, Shitong Yu, Yanfeng Hu, Jiang Yu, Hao Liu, Guoxin Li, <b>Yuming Jiang</b>.<br>
+		<em>Cell Death & Disease</em>, 2022.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Predicting peritoneal recurrence and disease-free survival from CT images in gastric cancer with multitask deep learning: a retrospective study</a><br>
+		<b>Yuming Jiang</b>, Zhicheng Zhang, Qingyu Yuan, Wei Wang, Hongyu Wang, Tuanjie Li, Weicai Huang, Jingjing Xie, Chuanli Chen, Zepang Sun, Jiang Yu, Yikai Xu, George A Poultsides, Lei Xing, Zhiwei Zhou, Guoxin Li, Ruijiang Li.<br>
+		<em>The Lancet Digital Health</em>, 2022.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Tumor microenvironment characterization for assessment of recurrence and survival outcome in gastric cancer to predict chemotherapy and immunotherapy response</a><br>
+		Yan Chen, Zepang Sun, Li Wan, Hongzhuan Chen, Tieju Xi, <b>Yuming Jiang</b>.<br>
+		<em>Frontiers in Immunology</em>, 2022.</br>
+	</li>
+	</ul>
+	
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
