--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Taojun Zhang, Zhang Taojun, Taojun, Southern Medical University, SMU"> 
-<meta name="description" content="Taojun Zhang is a Graduate student at SMU.">
+<meta name="keywords" content="Yuming Jiang, Jiang Yuming, Yuming, Wake Forest University"> 
+<meta name="description" content="Yuming Jiang is an assistant professor at The Wake Forest University School of Medicine.">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Taojun Zhang Homepage</title>
+<title>Yuming Jiang Homepage</title>
 <style>
     body {
         max-width: 800px; /* 设置页面最大宽度为1200像素 */
@@ -200,21 +200,21 @@
 	
 	<ul>
 	<li>
-		<a href="" target="_blank">QUIZ: An arbitrary volumetric point matching method for medical imageregistration</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S0895611124000132?via%3Dihub" target="_blank">QUIZ: An arbitrary volumetric point matching method for medical imageregistration</a><br>
 		Lin Liu, Xinxin Fan, Haoyang Liu, Chulong Zhang, Weibin Kong, Jingjing Dai, <b>Yuming Jiang</b>, Yaoqin Xie, Xiaokun Liang.<br>
 		<em>Computerized Medical Imaging and Graphics</em>,2024.</br>
 	</li>
 	</ul>	
 	<ul>
 	<li>
-		<a href="" target="_blank">Comprehensive assessment of immune context and immunotherapy response via noninvasive imaging in gastric cancer</a><br>
+		<a href="https://www.jci.org/articles/view/175834" target="_blank">Comprehensive assessment of immune context and immunotherapy response via noninvasive imaging in gastric cancer</a><br>
 		Zepang Sun, Taojun Zhang, M Usman Ahmad, Zixia Zhou, Liang Qiu, Kangneng Zhou, Wenjun Xiong, Jingjing Xie, Zhicheng Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Wanying Feng, Yikai Xu, Lequan Yu, Wei Wang, Jiang Yu, Guoxin Li, <b>Yuming Jiang</b>.<br>
 		<em>Journal of Clinical Investigation</em>,2024.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
-		<a href="" target="_blank">Volumetric tumor tracking from a single cone-beam X-ray projection image enabled by deep learning</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S136184152300258X?via%3Dihub" target="_blank">Volumetric tumor tracking from a single cone-beam X-ray projection image enabled by deep learning</a><br>
 		Jingjing Dai, Guoya Dong, Chulong Zhang, Wenfeng He, Lin Liu, Tangsheng Wang, <b>Yuming Jiang</b>, Wei Zhao, Xiang Zhao, Yaoqin Xie, Xiaokun Liang.<br>
 		<em>Medical Image Analysis</em>,2024.</br>
 	</li>
@@ -363,9 +363,9 @@
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
-		<a href="https://iopscience.iop.org/article/10.1088/1361-6560/ac195c" target="_blank">Metal Artifact Reduction in 2D CT Images with Self-supervised Cross-domain Learning</a><br>
-		<b>Lequan Yu</b>, Zhicheng Zhang, Xiaomeng Li, Hongyi Ren, Wei Zhao, Lei Xing.<br>
-		<em>Physics in Medicine & Biology</em> (<i><b>PMB</b></i>), 2021.</br>
+		<a href="" target="_blank">Radiomics signature based on computed tomography images for the preoperative prediction of lymph node metastasis at individual stations in gastric cancer: A multicenter study</a><br>
+		Zepang Sun, <b>Yuming Jiang</b>, Chuanli Chen, Huan Zheng, Weicai Huang, Benjamin Xu, Weijing Tang, Qingyu Yuan, Kangneng Zhou, Xiaokun Liang, Hao Chen, Zhen Han, Hao Feng, Shitong Yu, Yanfeng Hu, Jiang Yu, Zhiwei Zhou, Wei Wang, Yikai Xu, Guoxin Li.<br>
+		<em>Radiotherapy and Oncology</em> (<i><b>PMB</b></i>), 2021.</br>
 	</li>
 	</ul>
 	
