--- a/index.html
+++ b/index.html
@@ -368,6 +368,28 @@
 		<em>Radiotherapy and Oncology</em> (<i><b>PMB</b></i>), 2021.</br>
 	</li>
 	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Development and validation of a deep learning CT signature to predict survival and chemotherapy benefit in gastric cancer: a multicenter, retrospective study</a><br>
+		<b>Yuming Jiang</b>, Cheng Jin, Heng Yu, Jia Wu, Chuanli Chen, Qingyu Yuan, Weicai Huang, Yanfeng Hu, Yikai Xu, Zhiwei Zhou, George A Fisher Jr, Guoxin Li, Ruijiang Li.<br>
+		<em>Annals of surgery</em> (<i><b>PMB</b></i>), 2021.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">The epithelial and stromal immune microenvironment in gastric cancer: A comprehensive analysis reveals prognostic factors with digital cytometry</a><br>
+		Wenjun Shen, Guoyun Wang, Georgia R Cooper, <b>Yuming Jiang</b>, Xin Zhou.<br>
+		<em>Cancers</em> (<i><b>PMB</b></i>), 2021.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="" target="_blank">Radiographical assessment of tumour stroma and treatment outcomes using deep learning: a retrospective, multicohort study</a><br>
+		<b>Yuming Jiang</b>, Xiaokun Liang, Zhen Han, Wei Wang, Sujuan Xi, Tuanjie Li, Chuanli Chen, Qingyu Yuan, Na Li, Jiang Yu, Yaoqin Xie, Yikai Xu, Zhiwei Zhou, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
+		<em>The Lancet Digital Health</em> (<i><b>PMB</b></i>), 2021.</br>
+	</li>
+	</ul>
+	
 	
 	<p><font face="Arial" size="4"><b>Before 2020</b></font></p> 
 	
