--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     text-decoration: none; /* 移除超链接的下划线 */
     color: #3a5779;
   }
+  ul li a {
+    color: #3a5779;
+    text-decoration: none;
+  }
   .navbar a::after {
     content: "";
     position: absolute; /* 设置伪元素为绝对定位 */
