--- a/index.html
+++ b/index.html
@@ -369,46 +369,83 @@
 	<li>
 		<a href="" target="_blank">Radiomics signature based on computed tomography images for the preoperative prediction of lymph node metastasis at individual stations in gastric cancer: A multicenter study</a><br>
 		Zepang Sun, <b>Yuming Jiang</b>, Chuanli Chen, Huan Zheng, Weicai Huang, Benjamin Xu, Weijing Tang, Qingyu Yuan, Kangneng Zhou, Xiaokun Liang, Hao Chen, Zhen Han, Hao Feng, Shitong Yu, Yanfeng Hu, Jiang Yu, Zhiwei Zhou, Wei Wang, Yikai Xu, Guoxin Li.<br>
-		<em>Radiotherapy and Oncology</em> (<i><b>PMB</b></i>), 2021.</br>
+		<em>Radiotherapy and Oncology</em>, 2021.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="" target="_blank">Development and validation of a deep learning CT signature to predict survival and chemotherapy benefit in gastric cancer: a multicenter, retrospective study</a><br>
 		<b>Yuming Jiang</b>, Cheng Jin, Heng Yu, Jia Wu, Chuanli Chen, Qingyu Yuan, Weicai Huang, Yanfeng Hu, Yikai Xu, Zhiwei Zhou, George A Fisher Jr, Guoxin Li, Ruijiang Li.<br>
-		<em>Annals of surgery</em> (<i><b>PMB</b></i>), 2021.</br>
+		<em>Annals of surgery</em>, 2021.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="" target="_blank">The epithelial and stromal immune microenvironment in gastric cancer: A comprehensive analysis reveals prognostic factors with digital cytometry</a><br>
 		Wenjun Shen, Guoyun Wang, Georgia R Cooper, <b>Yuming Jiang</b>, Xin Zhou.<br>
-		<em>Cancers</em> (<i><b>PMB</b></i>), 2021.</br>
+		<em>Cancers</em>, 2021.</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="" target="_blank">Radiographical assessment of tumour stroma and treatment outcomes using deep learning: a retrospective, multicohort study</a><br>
 		<b>Yuming Jiang</b>, Xiaokun Liang, Zhen Han, Wei Wang, Sujuan Xi, Tuanjie Li, Chuanli Chen, Qingyu Yuan, Na Li, Jiang Yu, Yaoqin Xie, Yikai Xu, Zhiwei Zhou, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
-		<em>The Lancet Digital Health</em> (<i><b>PMB</b></i>), 2021.</br>
+		<em>The Lancet Digital Health</em>, 2021.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://academic.oup.com/bjs/article/108/5/542/6287163?login=false" target="_blank">Deep learning analysis of the primary tumour and the prediction of lymph node metastases in gastric cancer</a><br>
+		C Jin, <b>Y Jiang</b>, H Yu, W Wang, B Li, C Chen, Q Yuan, Y Hu, Y Xu, Z Zhou, G Li, R Li.<br>
+		<em>British Journal of Surgery</em>, 2021.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://www.frontiersin.org/articles/10.3389/fmed.2021.627927/full" target="_blank">Activated Hepatic Stellate Cells Induce Infiltration and Formation of CD163+ Macrophages via CCL2/CCR2 Pathway</a><br>
+		Sujuan Xi, Xiaoyan Zheng, Xiangyong Li, <b>Yuming Jiang</b>, Yuankai Wu, Jiao Gong, Yusheng Jie, Zhanyi Li, Jing Cao, Liuping Sha, Min Zhang, Yutian Chong.<br>
+		<em>Frontiers in Medicine</em>, 2021.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2774582" target="_blank">Noninvasive prediction of occult peritoneal metastasis in gastric cancer using deep learning</a><br>
+		<b>Yuming Jiang</b>, Xiaokun Liang, Wei Wang, Chuanli Chen, Qingyu Yuan, Xiaodong Zhang, Na Li, Hao Chen, Jiang Yu, Yaoqin Xie, Yikai Xu, Zhiwei Zhou, Guoxin Li, Ruijiang Li.<br>
+		<em>JAMA network open</em>, 2021.</br>
 	</li>
 	</ul>
 	
-	
 	<p><font face="Arial" size="4"><b>Before 2020</b></font></p> 
+	<ul>	
+	<li>
+		<a href="https://www.mdpi.com/2072-6694/12/12/3562" target="_blank">Single-cell spatial analysis of tumor and immune microenvironment on whole-slide image reveals hepatocellular carcinoma subtypes</a><br>
+		Haiyue Wang, <b>Yuming Jiang</b>, Bailiang Li, Yi Cui, Dengwang Li, Ruijiang Li.<br>
+		<em>Cancers</em>, 2020.</br>
+	</li>
+        </ul>
+
+
+
+
+
+
+
+
 	
-	<ul>
-		
+	<ul>	
 	<li>
 		<a href="https://arxiv.org/abs/1907.07034" target="_blank">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
 		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2019.</br>
-		<p style="margin-top:3px">
-			[<a href="https://github.com/yulequan/UA-MT" target="_blank">code</a>]
-		</p>
+		<em>Medical Image Computing and Computer Assisted Intervention</em>, 2019.</br>
 	</li>
+	</ul>
 
-</ul>
+
+
+
+
+
+	
 <br>
 </div>
 
