--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     color: #3a5779;
     text-decoration: none;
   }
+  p a {
+    color: #3a5779;
+    text-decoration: none;
+  }
   .navbar a::after {
     content: "";
     position: absolute; /* 设置伪元素为绝对定位 */
