--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     transform: translate(-50%, -50%); /* 将伪元素水平和垂直居中 */
     z-index: -1;
   }
+#publications a {
+    color: #3a5779;
+    text-decoration: none;
+  }
 </style>
 
 <script>
