--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     margin-right: 40px; /* 调整超链接之间的右侧间距 */
     font-size: 15px; /* 增大字体大小 */
     text-decoration: none; /* 移除超链接的下划线 */
-    color: #3a5779;
+    color: #527BBD;
   }
   ul li a {
-    color: #3a5779;
+    color: #527BBD;
     text-decoration: none;
   }
   p a {
-    color: #3a5779;
+    color: #527BBD;
     text-decoration: none;
   }
   .navbar a::after {
@@ -45,7 +45,7 @@
     z-index: -1;
   }
 #publications a {
-    color: #3a5779;
+    color: #2E5593;
     text-decoration: none;
   }
 </style>
@@ -86,7 +86,7 @@
 					<h1 id="Yuming">Yuming Jiang</h1>
 					<style>
 					  #Yuming{
-					   color: #3a5779
+					   color: #527BBD
 					  }
 					</style>
 				</div>
@@ -94,7 +94,7 @@
 				<h3 id="Professor">Assistant Professor</h3>
 					<style>
 					  #Professor{
-					   color: #3a5779
+					   color: #527BBD
 					  }
 					</style>
 				<p>
@@ -118,7 +118,7 @@
 <h2 id="Biography">Biography</h2>
 <style>
   #Biography {
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -146,7 +146,7 @@
 <h2 id="News">News</h2>
 <style>
   #News {
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -162,7 +162,7 @@
 <h2 id="Experience">Experience</h2>
 <style>
   #Experience {
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -199,7 +199,7 @@
 <h2 id="SelectedPublications">Selected Publications [<a href="https://scholar.google.com/citations?hl=en&user=FxBBKhoAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>]</h2>
 <style>
   #SelectedPublications {
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -461,7 +461,7 @@
 <h2 id="Students">Students</h2>
 <style>
   #Students {
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -497,7 +497,7 @@
 <h2 id="Presentations">Recent Talks &amp; Presentations</h2>
 <style>
   #Presentations {
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -515,7 +515,7 @@
 <h2 id="Honors">Honors &amp; Awards</h2>
 <style>
   #Honors{
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -533,7 +533,7 @@
 <h2 id="Professional">Professional Activities</h2>
 <style>
   #Professional{
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
@@ -567,7 +567,7 @@
 <h2 id="Teaching">Teaching</h2>
 <style>
   #Teaching {
-    color: #3a5779;
+    color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
