--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     color: #2E5593;
     text-decoration: none;
   }
+#Students a {
+    color: #2E5593;
+    text-decoration: none;
+  }
 </style>
 
 <script>
@@ -457,7 +461,7 @@
 <br>
 </div>
 
-<div id="students">
+<div id="Students">
 <h2 id="Students">Students</h2>
 <style>
   #Students {
