--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
     color: #2E5593;
     text-decoration: none;
   }
-#Students a {
-    color: #2E5593;
-    text-decoration: none;
-  }
+
 </style>
 
 <script>
@@ -473,7 +470,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="https://howardchanth.github.io" target="_blank">Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://howardchanth.github.io" target="_blank"，style="color: #3a5779; text-decoration: none";>Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
 	</tbody>
 	</table>
 	<br>
