--- a/index.html
+++ b/index.html
@@ -432,10 +432,34 @@
 		<em>Cancers</em>, 2020.</br>
 	</li>
         </ul>
-
-
-
-
+	<ul>	
+	<li>
+		<a href="https://journals.lww.com/ctg/fulltext/2020/10000/chemotherapy_use_and_survival_among_young_and.10.aspx" target="_blank">Chemotherapy use and survival among young and middle-aged patients with gastric cancer</a><br>
+		<b>Yuming Jiang</b>, Jingjing Xie, Weicai Huang, Hao Chen, Sujuan Xi, Tuanjie Li, Chuanli Chen, Zepang Sun, Yanfeng Hu, Wei Liu, Jiang Yu, Zhiwei Zhou, Shirong Cai, Guoxin Li.<br>
+		<em>Clinical and Translational Gastroenterology</em>, 2020.</br>
+	</li>
+        </ul>
+	<ul>	
+	<li>
+		<a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2020.01416/full" target="_blank">Radiomics nomogram for prediction of peritoneal metastasis in patients with gastric cancer</a><br>
+		Weicai Huang, Kangneng Zhou, <b>Yuming Jiang</b>, Chuanli Chen, Qingyu Yuan, Zhen Han, Jingjing Xie, Shitong Yu, Zepang Sun, Yanfeng Hu, Jiang Yu, Hao Liu, Ruoxiu Xiao, Yikai Xu, Zhiwei Zhou, Guoxin Li.<br>
+		<em>Frontiers in Oncology</em>, 2020.</br>
+	</li>
+        </ul>
+	<ul>	
+	<li>
+		<a href="https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2020.00835/full" target="_blank">Genomics Score Based on Genome-Wide Network Analysis for Prediction of Survival in Gastric Cancer: A Novel Prognostic Signature</a><br>
+		Zepang Sun, Hao Chen, Weicai Huang, Hao Liu, <b>Yuming Jiang</b>, Guoxin Li.<br>
+		<em>Frontiers in Genetics</em>, 2020.</br>
+	</li>
+        </ul>
+	<ul>	
+	<li>
+		<a href="https://www.annalsofoncology.org/article/S0923-7534(20)36382-1/fulltext" target="_blank">Noninvasive imaging evaluation of tumor immune microenvironment to predict outcomes in gastric cancer</a><br>
+		<b>Y Jiang</b>, H Wang, J Wu, C Chen, Q Yuan, W Huang, T Li, S Xi, Y Hu, Z Zhou, Y Xu, G Li, R Li.<br>
+		<em>Annals of Oncology</em>, 2020.</br>
+	</li>
+        </ul>
 
 
 
@@ -470,7 +494,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="https://howardchanth.github.io" target="_blank"，style="color: #3a5779; text-decoration: none";>Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://howardchanth.github.io" target="_blank">Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
 	</tbody>
 	</table>
 	<br>
