--- a/index.html
+++ b/index.html
@@ -460,7 +460,29 @@
 		<em>Annals of Oncology</em>, 2020.</br>
 	</li>
         </ul>
+	<ul>	
+	<li>
+		<a href="https://insight.jci.org/articles/view/136570" target="_blank">Natural killer cell and stroma abundance are independently prognostic and predict gastric cancer chemotherapy benefit</a><br>
+		Bailiang Li, <b>Yuming Jiang</b>, Guoxin Li, George A Fisher Jr, Ruijiang Li.<br>
+		<em>JCI insight</em>, 2020.</br>
+	</li>
+        </ul>
+	<ul>	
+	<li>
+		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7219099/" target="_blank">Prognostic value and nomograms of proximal margin distance in gastric cancer with radical distal gastrectomy</a><br>
+		Jun Luo, <b>Yuming Jiang</b>, Xinhua Chen, Yuehong Chen, Jhang Lopsang Gurung, Tingyu Mou, Liying Zhao, Guoqing Lyu, Tuanjie Li, Guoxin Li, Jiang Yu.<br>
+		<em>Chinese Journal of Cancer Research</em>, 2020.</br>
+	</li>
+        </ul>
 
+
+
+
+
+
+
+
+	
 
 
 
