--- a/index.html
+++ b/index.html
@@ -474,24 +474,74 @@
 		<em>Chinese Journal of Cancer Research</em>, 2020.</br>
 	</li>
         </ul>
-
-
-
-
-
-
-
-
-	
-
-
-
-	
 	<ul>	
 	<li>
-		<a href="https://arxiv.org/abs/1907.07034" target="_blank">Uncertainty-aware Self-ensembling Model for Semi-supervised 3D Left Atrium Segmentation</a><br>
-		<b>Lequan Yu</b>, Shujun Wang, Xiaomeng Li, Chi-Wing Fu, and Pheng-Ann Heng.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em>, 2019.</br>
+		<a href="https://www.jcancer.org/v11p0678.htm" target="_blank">Young age increases risk for lymph node positivity in gastric cancer: A Chinese multi-institutional database and US SEER database study</a><br>
+		<b>Yuming Jiang</b>, Weicai Huang, Jingjing Xie, Zhen Han, Chuanli Chen, Sujuan Xi, Zepang Sun, Yanfeng Hu, Liying Zhao, Jiang Yu, Tuanjie Li, Zhiwei Zhou, Shirong Cai, Guoxin Li.<br>
+		<em>Journal of Cancer</em>, 2020.</br>
+	</li>
+        </ul>
+	<ul>	
+	<li>
+		<a href="https://aacrjournals.org/cancerimmunolres/article/7/12/2065/469491/Tumor-Immune-Microenvironment-and-Chemosensitivity" target="_blank">Tumor immune microenvironment and chemosensitivity signature for predicting response to chemotherapy in gastric cancer</a><br>
+		<b>Yuming Jiang</b>, Jingjing Xie, Weicai Huang, Hao Chen, Sujuan Xi, Zhen Han, Lei Huang, Tian Lin, Li-Ying Zhao, Yan-Feng Hu, Jiang Yu, Shi-Rong Cai, Tuanjie Li, Guoxin Li.<br>
+		<em>Cancer immunology research</em>, 2019.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2019.00671/full" target="_blank">Frequency and prognosis of pulmonary metastases in newly diagnosed gastric cancer</a><br>
+		Zepang Sun, Hao Liu, Jiang Yu, Weicai Huang, Zhen Han, Tian Lin, Hao Chen, Mingli Zhao, Yanfeng Hu, <b>Yuming Jiang</b>, Guoxin Li.<br>
+		<em>Frontiers in oncology</em>, 2019.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2019.00312/full" target="_blank">Is Epstein-Barr Virus Infection Associated With Thyroid Tumorigenesis?—A Southern China Cohort Study</a><br>
+		Shi-Tong Yu, Jun-Na Ge, Rui-Chen Li, Zhi-Gang Wei, Bai-Hui Sun, <b>Yu-Ming Jiang</b>, Jing-Yi Luo, Hao Liu, Shang-Tong Lei.<br>
+		<em>Frontiers in oncology</em>, 2019.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2019.00340/full" target="_blank">Radiomics signature on computed tomography imaging: association with lymph node metastasis in patients with gastric cancer</a><br>
+		<b>Yuming Jiang</b>, Wei Wang, Chuanli Chen, Xiaodong Zhang, Xuefan Zha, Wenbing Lv, Jingjing Xie, Weicai Huang, Zepang Sun, Yanfeng Hu, Jiang Yu, Tuanjie Li, Zhiwei Zhou, Yikai Xu, Guoxin Li.<br>
+		<em>Frontiers in oncology</em>, 2019.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.jcancer.org/v10p4357.htm" target="_blank">Prognostic significance of PSMD1 expression in patients with gastric cancer</a><br>
+		Wenjun Xiong, Wei Wang, Haipeng Huang, <b>Yuming Jiang</b>, Weihong Guo, Hao Liu, Jiang Yu, Yanfeng Hu, Jin Wan, Guoxin Li.<br>
+		<em>Journal of Cancer</em>, 2019.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.jcancer.org/v10p2991.htm" target="_blank">Liver metastases in newly diagnosed gastric cancer: a population-based study from SEER</a><br>
+		Zepang Sun, Huan Zheng, Jiang Yu, Weicai Huang, Tuanjie Li, Hao Chen, Yanfeng Hu, Mingli Zhao, Hao Liu, <b>Yuming Jiang</b>, Guoxin Li.<br>
+		<em>Journal of Cancer</em>, 2019.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://aacrjournals.org/clincancerres/article/24/22/5574/81041/Immunomarker-Support-Vector-Machine-Classifier-for" target="_blank">Immunomarker support vector machine classifier for prediction of gastric cancer survival and adjuvant chemotherapeutic benefit</a><br>
+		<b>Yuming Jiang</b>, Jingjing Xie, Zhen Han, Wei Liu, Sujuan Xi, Lei Huang, Weicai Huang, Tian Lin, Liying Zhao, Yanfeng Hu, Jiang Yu, Qi Zhang, Tuanjie Li, Shirong Cai, Guoxin Li.<br>
+		<em>Clinical Cancer Research</em>, 2018.</br>
+	</li>
+	</ul>
+	<ul>	
+	<li>
+		<a href="https://www.thelancet.com/journals/ebiom/article/PIIS2352-3964(18)30364-5/fulltext" target="_blank">Radiomics signature of computed tomography imaging for prediction of survival and chemotherapeutic benefits in gastric cancer</a><br>
+		<b>Yuming Jiang</b>, Chuanli Chen, Jingjing Xie, Wei Wang, Xuefan Zha, Wenbing Lv, Hao Chen, Yanfeng Hu, Tuanjie Li, Jiang Yu, Zhiwei Zhou, Yikai Xu, Guoxin Li.<br>
+		<em>EBioMedicine</em>, 2018.</br>
+	</li>
+	</ul>	
+	<ul>	
+	<li>
+		<a href="https://journals.lww.com/annalsofsurgery/abstract/2018/03000/immunoscore_signature__a_prognostic_and_predictive.20.aspx" target="_blank">ImmunoScore signature: a prognostic and predictive tool in gastric cancer</a><br>
+		<b>Yuming Jiang</b>, QI Zhang, Yanfeng Hu, Tuanjie Li, Jiang Yu, Liying Zhao, Gengtai Ye, Haijun Deng, Tingyu Mou, Shirong Cai, Zhiwei Zhou, Hao Liu, Guihua Chen, Guoxin Li, Xiaolong Qi.<br>
+		<em>Annals of surgery</em>, 2018.</br>
 	</li>
 	</ul>
 
